# Camry

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_trade_reasoning.py  0003_exchange_snapshots.py  0004_dydx_test_trades.py  0005_risk_decisions.py
app/: main.py
app/agents/: decision_agent.py  gemini.py  market_agent.py  news_agent.py
app/api/routes/: exchange.py  research.py  risk.py  system.py  telegram.py
app/collectors/: coingecko.py  fear_greed.py  hyperliquid.py  news.py
app/core/: config.py  http.py  logging.py
app/db/: models.py  repositories.py  session.py
app/schemas/: domain.py
app/services/: analytics.py  backtesting.py  decision_scheduler.py  dydx.py  dydx_execution.py  orchestrator.py  paper_trade_monitor.py  paper_trading.py  risk.py  risk_v1.py  signal_reports.py  telegram.py  telegram_commands.py  telegram_poller.py
docs/: LOCAL_DEVELOPMENT.md  SETUP.md  SUPABASE.md
scripts/: dydx_testnet_order.cjs  execute_dydx_small_trade.py  run_agents_on_collected_data.py  run_background_services.py  run_background_services.sh  show_supabase_records.py  test_coingecko_collector.py  test_fear_greed_collector.py  test_hyperliquid_collector.py  test_rss_news_collector.py  verify_hyperliquid_testnet_market.py
tests/: conftest.py  test_agents.py  test_analytics.py  test_collectors.py  test_gemini.py  test_health.py  test_paper_trading.py  test_risk.py
