[project]
name = "hyperliquid-research-platform"
version = "0.1.0"
description = "AI-powered Hyperliquid research and paper-trading platform."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "feedparser>=6.0.11",
  "google-genai>=0.3.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "python-telegram-bot>=21.4",
  "sqlalchemy[asyncio]>=2.0.31",
  "structlog>=24.2.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.1",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = [
  "B008",    # FastAPI uses Depends/Query in endpoint signatures.
  "ASYNC109" # httpx owns the request timeout; callers should not wrap client lifetime.
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
